--- a/assets/index.html
+++ b/assets/index.html
@@ -1,266 +1,129 @@
 <!doctype html>
 <html ng-app="sampleSite" lang="en">
-<head>
-    <meta charset="UTF-8">
-    <base href="/">
+    <head>
+        <meta charset="UTF-8">
+        <base href="/">
 
-    <title>Starter MEAN Single Page Application</title>
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/app.css"> <!-- custom styles -->
-    <link rel="stylesheet" href="css/animate.min.css">
+        <title>Starter MEAN Single Page Application</title>
+        <!-- CSS -->
+        <link rel="stylesheet" href="css/app.css"> <!-- custom styles -->
+        <link rel="stylesheet" href="css/animate.min.css">
+        <!-- JS -->
+        <script src="libs/angular/angular.js"></script>
+        <script src="libs/angular-route/angular-route.min.js"></script>
+        <script src="libs/angular-animate/angular-animate.js"></script>
+        <script src="js/angular-ui-router.js"></script>
+        <!-- ANGULAR CUSTOM -->
+        <script src="js/controllers/MainCtrl.js"></script>
+        <script src="js/controllers/ProjectsCtrl.js"></script>
+        <script src="js/controllers/LinksCtrl.js"></script>
+        <script src="js/controllers/CntactCtrl.js"></script>
+        <script src="js/controllers/AbtCtrl.js"></script>
+        <script src="js/appRoutes.js"></script>
+        <script src="js/app.js"></script>
+    </head>
 
-    <!-- JS -->
-    <script src="libs/angular/angular.js"></script>
-    <script src="libs/angular-route/angular-route.min.js"></script>
-    <script src="libs/angular-animate/angular-animate.js"></script>
-    <script src="js/angular-ui-router.js"></script>
-
-    <!-- ANGULAR CUSTOM -->
-    <script src="js/controllers/MainCtrl.js"></script>
-    <script src="js/controllers/ProjectsCtrl.js"></script>
-    <script src="js/controllers/LinksCtrl.js"></script>
-    <script src="js/controllers/CntactCtrl.js"></script>
-    <script src="js/controllers/AbtCtrl.js"></script>
-    <script src="js/appRoutes.js"></script>
-    <script src="js/app.js"></script>
-</head>
-
-
-<div class="outer-octagon clip-each-big border-style-gradient-big" ng-controller="mainController as main">
-    <div class="clip-wrap-polygon clip-each-big border-style-gradient-big animated">
-            <div class="left-layer">
-               <div class="clip-wrap-1">
-                <div class="clip-each-home border-style-gradient center-gradient"><p class="button-links" ng-click="main.addRollAnimation();">About Me</p></div>
-            </div>
-        </div>
-
-        <div class="middle-layer">
-            <div class="clip-wrap-2">
-                <div class="clip-each-home border-style-gradient center-gradient"><p class="button-links" ng-click="main.addRollAnimation();">About Me</p></div>
-            </div>
-
-            <div class="clip-wrap-5">
-                <div class="clip-each-home border-style-gradient center-middle-gradient"></div>
-            </div>
-
-            <div class="clip-wrap-4">
-                <div class="clip-each-home border-style-gradient center-gradient" ng-click="main.addRollAnimation()"><p class="button-links contacts" href="#/contacts">Contact</p></div>
-            </div>
-
-        </div>
-
-        <div class="right-layer">
-            <div class="clip-wrap-3">
-                <div class="clip-each-home border-style-gradient center-gradient" ng-click="main.addRollAnimation()"><p class="button-links links-big" href="#/links">Links</p></div>
-            </div>
-
-        </div>
-    </div>
-
-    <div class="sidebar">
-        <div class="clip-each-home side1 border-style-gradient"></div>
-        <div class="clip-each-home side2 border-style-gradient"></div>
-        <div class="clip-each-home side3 border-style-gradient"></div>
-        <div class="clip-each-home side4 border-style-gradient"></div>
-        <div class="clip-each-home side5 border-style-gradient"></div>
-    </div>
-
-    </div>
-</html>
-
-<div class="outer-octagon-right clip-each-big border-style-gradient-big">
-    <div class="clip-wrap-polygon clip-each-big border-style-gradient-big">
-
-
-
-
-    </div>
-
-
-
-
-
-
-
-</div>
-
-
-</html>
-
-
-
-
-<!--     <div class="clip-wrap-polygon-bg clip-each-big border-style-gradient-big animated">
-        <div class="side-octagons-container" ng-show="main.home == false;">
-            <div class="sideOctagon one border-style-gradient animated"><a>About Me</a></div>
-            <div class="sideOctagon two border-style-gradient animated"><a>Projects</a></div>
-            <div class="sideOctagon three border-style-gradient animated"><a>Links</a></div>
-        </div>
-    </div> -->
-
-<!--         <div class="projects-container" ng-show="main.projects == true">
-=======
-    <header>
-        <ul class="header-list ">
-            <li class="header-list-item clip-each-small border-style-gradient"><a class="links" href="/">Home</a></li>
-            <li class="header-list-item clip-each-small border-style-gradient"><a class="links" href="/#">Linkedin</a></li>
-            <li class="header-list-item clip-each-small border-style-gradient"><a class="links" href="#/about">Github</a></li>
-            <li class="header-list-item clip-each-small border-style-gradient"><a class="links" href="#/projects">Reddit</a></li>
-            <li class="header-list-item clip-each-small border-style-gradient"><a class="links" href="#/links">Twitter</a></li>
-        </ul>
-    </header>
-
-    <div class="app-container" ng-controller="mainController as main">
-        <div class="ng-view-container" >
-            <div class="button-group animated" ng-show="main.home == true">
-              <div class="button-container">
-                <div class="buttons">
-                    <div class="clip-wrap-1">
-                        <div class="clip-each-home border-style-gradient"><p class="button-links" ng-click="main.addRollAnimation();">About Me</p></div>
+    <div class="outer-octagon clip-each-big border-style-gradient-big animated" ng-controller="mainController as main">
+        <div class="clip-wrap-polygon clip-each-big border-style-gradient-big animated">
+            <div class="layers-container" ng-show="main.home == true;">
+                <div class="left-layer">
+                   <div class="clip-wrap-1">
+                        <div class="clip-each-home border-style-gradient center-gradient" ng-click="main.addRollAnimation(); main.setProjects()">
+                            <p class="button-links">Projects</p>
+                        </div>
                     </div>
+                </div>
 
-                    <div class="clip-wrap-2" ng-click="main.addRollAnimation()">
-                        <div class="clip-each-home border-style-gradient"><p class="button-links projects" href="#/projects" ng-click="main.addRollAnimation();">Projects</p></div>
+                <div class="middle-layer">
+                    <div class="clip-wrap-2">
+                        <div class="clip-each-home border-style-gradient center-gradient" ng-click="main.addRollAnimation(); main.setAbout();">
+                            <p class="button-links">About</p>
+                        </div>
                     </div>
 
                     <div class="clip-wrap-5">
-                        <div class="clip-each-home border-style-gradient"></div>
-                    </div>
-
-                    <div class="clip-wrap-3">
-                        <div class="clip-each-home border-style-gradient" ng-click="main.addRollAnimation()"><p class="button-links links-big" href="#/links">Links</p></div>
+                        <div class="clip-each-home border-style-gradient center-middle-gradient"></div>
                     </div>
 
                     <div class="clip-wrap-4">
-                        <div class="clip-each-home border-style-gradient" ng-click="main.addRollAnimation()"><p class="button-links contacts" href="#/contacts">Contact</p></div>
+                        <div class="clip-each-home border-style-gradient center-gradient" ng-click="main.addRollAnimation(); main.setContacts();">
+                            <p class="button-links contacts" href="#/contacts">Contact</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="right-layer">
+                    <div class="clip-wrap-3">
+                        <div class="clip-each-home border-style-gradient center-gradient" ng-click="main.addRollAnimation(); main.setLinks();">
+                            <p class="button-links links-big" href="#/links">Links</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="content-container">
+                <div class="projects-container" ng-show="main.projects == true">
+                    <div class="border-style-gradient-project top-container octagon-top animated">
+                        <a class="project-one">2TR</a>
+                    </div>
+
+                    <div class="middle-container octagon-middle border-style-gradient-project-middle animated">
+                        <a class="project-two">FlowChart</a>
+                    </div>
+
+                    <div class="border-style-gradient-project-bottom bottom-container octagon-bottom animated">
+                        <a class="project-three">TBA</a>
+                    </div>
+                </div>
+                <div class="about-container" ng-show="main.about == true">
+                    <div class="inner-clip-wrap-polygon clip-wrap-polygon clip-each-big border-style-gradient-big animated">
+                        <a class="about-description">About</a>
+                    </div>
+                </div>
+                <div class="links-container" ng-show="main.lnk == true">
+                    <div class="clip-each-home  first border-style-gradient animated"></div>
+                    <div class="clip-each-home side second border-style-gradient animated"></div>
+                    <div class="clip-each-home side third border-style-gradient animated"></div>
+                    <div class="clip-each-home side fourth border-style-gradient animated"></div>
+
+                </div>
+                 <div class="contacts-container" ng-show="main.contact == true">
+                    <div class="inner-clip-wrap-polygon clip-wrap-polygon clip-each-big border-style-gradient-big first-contact animated">
+                        Contact
+                    </div>
+                    <div class="inner-clip-wrap-polygon clip-wrap-polygon right-top-octagon clip-each-big border-style-gradient-big second-contact animated">
+                        Contact
+                    </div>
+
+                    <div class="border-style-gradient-project-bottom bottom-container octagon-bottom third-contact animated">
+                        Contact
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="projects-container" ng-show="main.projects == true">
->>>>>>> 7d6b78fb2a14499226b85f0c6598ebcbb3ab0b22
-            <div class="border-style-gradient-project top-container octagon-top animated">
-                <a class="project-one">2TR</a>
+        <div class="sidebar">
+            <div class="clip-each-home side1 border-style-gradient animated">
             </div>
-            <div class="middle-container octagon-middle border-style-gradient animated">
-                <a class="project-two">FlowChart</a>
+            <div class="clip-each-home side2 border-style-gradient animated" ng-click="main.showContent1();">
+                <p class="button-links links-big" ng-show="main.showSideLinks == true">{{main.sideLink1}}</p>
             </div>
-            <div class="border-style-gradient-project-bottom bottom-container octagon-bottom animated">
-                <a class="project-three">TBA</a>
+            <div class="clip-each-home side3 border-style-gradient animated" ng-click="main.showContent2();">
+                <p class="button-links links-big" ng-show="main.showSideLinks == true">{{main.sideLink2}}</p>
             </div>
-        </div>
-
-        <div class="about-container" ng-show="main.about == true">
-            <div class="border-style-gradient-project top-container octagon-top animated">
-                <a class="project-one">About</a>
+            <div class="clip-each-home side4 border-style-gradient animated" ng-click="main.showContent3();">
+                <p class="button-links links-big" ng-show="main.showSideLinks == true">{{main.sideLink3}}</p>
+            </div>
+            <div class="clip-each-home side5 border-style-gradient animated">
             </div>
         </div>
-
-        <div class="links-container" ng-show="main.links == true">
-            <div class="border-style-gradient-project top-container octagon-top animated">
-                <a class="project-one">Links</a>
-            </div>
-        </div>
-
-        <div class="contact-container" ng-show="main.contact == true">
-            <div class="border-style-gradient-project top-container octagon-top animated">
-                <a class="project-one">Contact</a>
-            </div>
-<<<<<<< HEAD
-        </div> -->
-
-
-
-
-<!-- <div class="outer-octagon clip-each-big border-style-gradient-big" ng-controller="mainController as main">
-    <div class="ng-view-container" >
-
-        <div class="buttons">
-            <div class="clip-wrap-1">
-                <div class="clip-each-home border-style-gradient"><p class="button-links" ng-click="main.addRollAnimation();">About Me</p></div>
-            </div>
-
-            <div class="clip-wrap-2" ng-click="main.addRollAnimation()">
-                <div class="clip-each-home border-style-gradient"><p class="button-links projects" href="#/projects" ng-click="main.addRollAnimation();">Projects</p></div>
-            </div>
-
-            <div class="clip-wrap-5">
-                <div class="clip-each-home center border-style-gradient"></div>
-            </div>
-
-            <div class="clip-wrap-3">
-                <div class="clip-each-home border-style-gradient" ng-click="main.addRollAnimation()"><p class="button-links links-big" href="#/links">Links</p></div>
-            </div>
-
-            <div class="clip-wrap-4">
-                <div class="clip-each-home border-style-gradient" ng-click="main.addRollAnimation()"><p class="button-links contacts" href="#/contacts">Contact</p></div>
-            </div>
-        </div>
-
-    </div>
-    <div class="sidebar">
-        <div class="clip-each-home side1 border-style-gradient"></div>
-        <div class="clip-each-home side2 border-style-gradient"></div>
-        <div class="clip-each-home side3 border-style-gradient"></div>
-        <div class="clip-each-home side4 border-style-gradient"></div>
-
     </div>
 
-
-    <div class="clip-wrap-polygon clip-each-big border-style-gradient-big animated"></div>
-</div>
-
+    <div class="outer-octagon-right clip-each-big border-style-gradient-big">
+        <div class="clip-wrap-polygon clip-each-big border-style-gradient-big">
+            <div class="clip-each-home side border-style-gradient animated" ng-click="main.showHome();">
+                <p class="button-links links-big" ng-show="main.showSideLinks == true">Home</p>
+            </div>
+        </div>
+    </div>
 </html>
--->
-
-
-
-
-
-
-<!--     <div class="clip-wrap-polygon-bg clip-each-big border-style-gradient-big animated">
-=======
-        </div>
-    </div>
-
-    <div class="clip-wrap-polygon-bg clip-each-big border-style-gradient-big animated">
->>>>>>> 7d6b78fb2a14499226b85f0c6598ebcbb3ab0b22
-        <div class="side-octagons-container" ng-show="main.home == false;">
-            <div class="sideOctagon one border-style-gradient animated"><a>About Me</a></div>
-            <div class="sideOctagon two border-style-gradient animated"><a>Projects</a></div>
-            <div class="sideOctagon three border-style-gradient animated"><a>Links</a></div>
-<<<<<<< HEAD
-        </div>
-    </div> -->
-
-<!--         <div class="projects-container" ng-show="main.projects == true">
-            <div class="border-style-gradient-project top-container octagon-top animated">
-                <a class="project-one">2TR</a>
-            </div>
-            <div class="middle-container octagon-middle border-style-gradient animated">
-                <a class="project-two">FlowChart</a>
-            </div>
-            <div class="border-style-gradient-project-bottom bottom-container octagon-bottom animated">
-                <a class="project-three">TBA</a>
-            </div>
-        </div>
-
-        <div class="about-container" ng-show="main.about == true">
-            <div class="border-style-gradient-project top-container octagon-top animated">
-                <a class="project-one">About</a>
-            </div>
-        </div>
-
-        <div class="links-container" ng-show="main.links == true">
-            <div class="border-style-gradient-project top-container octagon-top animated">
-                <a class="project-one">Links</a>
-            </div>
-        </div>
-
-        <div class="contact-container" ng-show="main.contact == true">
-            <div class="border-style-gradient-project top-container octagon-top animated">
-                <a class="project-one">Contact</a>
-            </div>
-        </div> -->
-
